# S_Med

./: CMakeLists.txt  main.c
Desaintxt/: bottom tengah.txt  logo2.txt  up tengah.txt
Desaintxt/Booting/: bootOwner.txt
Desaintxt/Dashboard/: transaksiObat.txt
Desaintxt/Elemen/: dataBook.txt
Desaintxt/Logo/: LOGO - APOTEK.txt  LOGO - LOGIN.txt  LOGO - SAHABAT_MEDIKA.txt  LOGO - SOBAT.txt  PHARMACYLOGO-L.txt  PHARMACYLOGO-M.txt  PLUS.txt  SPLASH-APOTEK.txt  SPLASH-SAHABAT_MEDIKA.txt
Interface/: Interface.h  interfaceMenuOwner.h
Source/: Dashboard.h  DeklarasiTipeData.h  Login.h  MenuOwner.h  Tampilan.h  keyUpDown.h  keyUpDownOwner.h
Source/CRUD MASTER STAFF/: Createstaff.h  Deletestaff.h  Readstaff.h  Updatestaff.h
Source/CRUD MASTER/CRUD MASTER ALAT/: Createalat.h  Deletealat.h  Readalat.h  Updatealat.h
Source/CRUD MASTER/CRUD MASTER JENIS OBAT/: Createjenis.h  Deletejenis.h  Readjenis.h  Updatejenis.h
Source/CRUD MASTER/CRUD MASTER OBAT/: Createobat.h  Deleteobat.h  Readobat.h  Updateobat.h
Source/CRUD MASTER/CRUD MASTER SUPPLIER/: Createsupplier.h  Deletesupplier.h  Readsupplier.h  Updatesupplier.h
Source/TRANSAKSI APOTEK/TRANSAKSI PEMBELIAN/: createTransaksiPembelianObat.h  readTransaksiPembelian.h
Source/TRANSAKSI APOTEK/TRANSAKSI PENERIMAAN/: createTransaksiPenerimaan.h  readTransaksiPenerimaan.h
